// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`commit should clear all storage entries for the account corresponding to `address` 1`] = `
[
  
Map {
    "0000000000000000000000000000000004277dc9" => undefined,
  }
,
  Map {},
]
`;

exports[`commit should clear all storage entries for the account corresponding to `address` 2`] = `
[
  
Map {
    "0000000000000000000000000000000004277dc9" => undefined,
  }
,
  Map {},
]
`;

exports[`commit should clear all storage entries for the account corresponding to `address` 3`] = `
[
  Map {},
  Map {},
]
`;

exports[`commit should clear all storage entries for the account corresponding to `address` 4`] = `"0x886f43e0144bf4f5748e999d0178ed7e4edea8ad708e0bf26a61341e8ae91d1e"`;
